Added CxIAST agent to docker file